Version 0.8.6   unreleased

   * Remove cedarTestSuite; this code is more appropriate at a project level.
   * Reindent all of the code with tabstop=4, which is consistent with my Eclipse formatting.
   * Fix typo when getting user input from console.

Version 0.8.5   16 Sep 2013

    * Add "enabled" flag onto cedarLabel, so it's easier to turn off.

Version 0.8.4   14 Sep 2013

   * Add GWT constants parser in CedarProperties
   * Add a copyJavadocToMercurial() method 
   * Add a cedarTestSuite plugin for unittest and clienttest tasks

Version 0.8.3   13 Sep 2013

   * Add Javadoc functionality

Version 0.8.2   13 Sep 2013

    * Initial public release
